Replace temporary link restoration with a more robust implementation